--- a/css/style.css
+++ b/css/style.css
@@ -1,15 +1,19 @@
 * {box-sizing: border-box;}
-/* Pour grand écran */
-@media screen and (min-width: 1280px) {
-    body {margin : 0 20%; padding: 0 0;
-        text-align: center;
-        border: 1px solid red
-    }
-}
-@media screen and (max-width: 1279px){
-    body {margin : 0 0; padding: 0 0;
-        text-align: center;
-        border: 1px solid red
-    }
-}
 
+body {margin: 0; padding: 0}
+
+
+@font-face {
+    font-family: "BBC Reith Sans";
+    src: url("https://db.onlinewebfonts.com/t/a1d0120b37754be8e80e39ab6ab95130.eot");
+    src: url("https://db.onlinewebfonts.com/t/a1d0120b37754be8e80e39ab6ab95130.eot?#iefix")
+        format("embedded-opentype"),
+    url("https://db.onlinewebfonts.com/t/a1d0120b37754be8e80e39ab6ab95130.woff2")
+        format("woff2"),
+    url("https://db.onlinewebfonts.com/t/a1d0120b37754be8e80e39ab6ab95130.woff")
+        format("woff"),
+    url("https://db.onlinewebfonts.com/t/a1d0120b37754be8e80e39ab6ab95130.ttf")
+        format("truetype"),
+    url("https://db.onlinewebfonts.com/t/a1d0120b37754be8e80e39ab6ab95130.svg#BBC Reith Sans")
+        format("svg");
+}
