--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 header{position: relative;}
-#logo {width: 130px; heigth: 20px;}
+#logo {width: 130px; max-height: 35px;}
 #signIn {
     width: 176px;
 }
@@ -7,6 +7,7 @@ header{position: relative;}
 header nav {
     height: 64px;
     width: 100%;
+    margin: 8px 0 -8px 0;
 }
 /* pour afficher le menu avec les marges sur un grand écran */
 @media screen and (min-width: 1280px){
@@ -24,13 +25,14 @@ header li {
     margin: auto; padding: 0;
 }
 header li a {
-    display: block;
+    display: inline-block;
     min-width: 60px;
     text-decoration: none;
     padding: 2px 5px 0 0;
     color: #000;
-    font: 'BBC Reith Sans';
+    font-family: 'BBC Reith Sans';
     font-size: 12px;
+    font-weight: bold;
 }
 header ul li ul {
     display: none;
@@ -39,12 +41,13 @@ header ul li:hover ul {
     display: block;
 }
 header li:hover ul li {
-    float: none;
+    float: left;
+    background: #FFF;
 }
 /* sous menu */
 .submenu {display: none;}
 header nav li:hover .submenu{
-    display: inline-block;
+    display: block;
     position: absolute;
     top: 100%;
     left: 0;
@@ -63,18 +66,30 @@ header #signIn {height: 30px}
     background: #b80000;
     color: white;
     padding: 0 17%;
+    display: inline-block;
+    width: 100%;
+    height: 86px;
 }
 #news h2{
     height: 56Px;
     font-size: 40px;
+    margin-top: -4px;
+    letter-spacing: 2px;
 }
 .menuNews {
     height: 36px;
-    background: #b80000;
-    display: block;
+    margin-top: -24px;
 }
-.menuNews ul {border: 3px solid green;}
 .menuNews a {
     color: #FFF;
     font-size: 14px;
+    margin: 0; padding: 0 5px;
+    font-family: 'BBC Reith Sans';
+}
+.menuNews a:hover {
+    border-bottom: 4px solid #FFF;
+}
+.tiniBorder {
+    border-left: 0.1em solid #FFF;
+    border-right: 0.1em solid #fff;
 }
