--- a/css/header.css
+++ b/css/header.css
@@ -2,8 +2,12 @@ header{position: relative;}
 #logo {width: 130px; max-height: 35px;}
 #signIn {
     width: 176px;
+    transform: translateY(-50%);
 }
-#signIn img {margin: 0; padding: 0 5px}
+#signIn img {
+    padding: 2px 10px;
+    float: left;
+}
 header nav {
     height: 64px;
     width: 100%;
@@ -33,6 +37,9 @@ header li a {
     font-family: 'BBC Reith Sans';
     font-size: 12px;
     font-weight: bold;
+}
+.mainMenu {
+    transform: translateY(50%);
 }
 header ul li ul {
     display: none;
@@ -65,7 +72,7 @@ header #signIn {height: 30px}
 #news {
     background: #b80000;
     color: white;
-    padding: 0 17%;
+    padding: 0 16%;
     display: inline-block;
     width: 100%;
     height: 86px;
@@ -75,6 +82,7 @@ header #signIn {height: 30px}
     font-size: 40px;
     margin-top: -4px;
     letter-spacing: 2px;
+    font-weight: bold;
 }
 .menuNews {
     height: 36px;
